Fix nil NoMethodError

--- a/app/views/organized/users/edit.html.haml
+++ b/app/views/organized/users/edit.html.haml
@@ -30,7 +30,7 @@
   .form-group.row
     %label.org-form-label= t(".email")
     .col-sm-4
-      %p.static-form-control= @membership.user.email
+      %p.static-form-control= @membership.user&.email
 
   .form-group.row
     %label.org-form-label
