--- a/app/views/bikes/show.html.haml
+++ b/app/views/bikes/show.html.haml
@@ -10,6 +10,28 @@
         %small.less-strong
           = t(".no_one_but_the_user_and_bike_index_admins")
 
+  - if @bike_code.present?
+    .alert.alert-success
+      %p
+        You scanned the sticker
+        %strong
+          = @bike_code.pretty_code
+        which is assigned to this #{@bike.type}.
+      - if current_user&.authorized?(@bike_code)
+        %p.mt-2
+          %em.less-strong
+            Is this sticker linked to the incorrect bike?
+            %a.gray-link{ href: "#updateBikeCodeLink", data: { toggle: "collapse" } }
+              Change the bike it links to
+        .collapse#updateBikeCodeLink
+          = form_tag bike_code_path(id: @bike_code.code, organization_id: @bike_code.organization_id), method: :put, class: "row mt-4" do
+            .col-sm-8.col-lg-10
+              .form-group
+                = label_tag :bike_id, "Switch to a new bike ID"
+                = text_field_tag :bike_id, nil, placeholder: "https://bikeindex.org/bikes/1234", class: "form-control"
+            .col-sm-4.col-lg-2.mt-4
+              = submit_tag "Update", class: "btn btn-success"
+
   -# Authorize check here, even though we're checking in controller too, because
   -# otherwise we're displaying user data
   - if current_user.present? && passive_organization.present? && current_user.authorized?(passive_organization)
