--- a/app/views/bikes/show.html.haml
+++ b/app/views/bikes/show.html.haml
@@ -12,25 +12,21 @@
 
   - if @bike_code.present?
     .alert.alert-success
-      %p
-        You scanned the sticker
-        %strong
-          = @bike_code.pretty_code
-        which is assigned to this #{@bike.type}.
+      %p= t(".you_scanned_this_sticker_html", pretty_code: @bike_code.pretty_code, bike_type: @bike.type)
       - if current_user&.authorized?(@bike_code)
         %p.mt-2
           %em.less-strong
-            Is this sticker linked to the incorrect bike?
+            = t(".is_this_linked_to_incorrect_bike")
             %a.gray-link{ href: "#updateBikeCodeLink", data: { toggle: "collapse" } }
-              Change the bike it links to
+              = t(".change_the_bike_sticker_linked_to")
         .collapse#updateBikeCodeLink
           = form_tag bike_code_path(id: @bike_code.code, organization_id: @bike_code.organization_id), method: :put, class: "row mt-4" do
             .col-sm-8.col-lg-10
               .form-group
-                = label_tag :bike_id, "Switch to a new bike ID"
+                = label_tag :bike_id, t(".switch_to_new_bike_id")
                 = text_field_tag :bike_id, nil, placeholder: "https://bikeindex.org/bikes/1234", class: "form-control"
             .col-sm-4.col-lg-2.mt-4
-              = submit_tag "Update", class: "btn btn-success"
+              = submit_tag t(".update"), class: "btn btn-success"
 
   -# Authorize check here, even though we're checking in controller too, because
   -# otherwise we're displaying user data
