--- a/app/views/organized/users/index.html.haml
+++ b/app/views/organized/users/index.html.haml
@@ -18,7 +18,7 @@
 .paginate-container
   = paginate @memberships
 
-.organized-table
+.full-screen-table
   %table.table.table-striped.table-bordered.table-sm
     %thead.sortable
       %th= sortable "created_at", t(".created")
