add impound functionality

--- a/app/assets/stylesheets/revised/pages/bikes/show.scss
+++ b/app/assets/stylesheets/revised/pages/bikes/show.scss
@@ -145,8 +145,7 @@
       }
     }
 
-    .geomessages-wrap {
-      text-align: right;
+    .organized-actions-wrap {
       padding: 8px 15px;
       background: #fdfdfd;
       border-top: 1px solid $gray-lightish;
