--- a/app/views/bikes/show.html.haml
+++ b/app/views/bikes/show.html.haml
@@ -3,7 +3,7 @@
 .container
   - if current_user&.superuser
     %p.mb-4.text-center
-      = link_to t(".bike_in_admin", bike_type: @bike.type.titleize), admin_bike_path(@bike.to_param), class: "btn btn-outline-info uncap", style: "display: block;"
+      = link_to t(".bike_in_admin", bike_type: @bike.type.titleize), admin_bike_path(@bike.to_param), class: "btn btn-outline-info uncap less-strong", style: "display: block;"
     - if @bike.user_hidden
       %h2.text-danger.mb-4.text-center
         = t(".hidden_by_owner")
