--- a/app/views/shared/_organized_skeleton.html.haml
+++ b/app/views/shared/_organized_skeleton.html.haml
@@ -22,12 +22,12 @@
           = active_link "Discuss", "https://discuss.bikeindex.org", class: "menu-item"
       - else
         - on_bikes_path = controller_name == "bikes" && action_name == "index" # Because we want to ignore queries and stuff
-        - on_impound_bikes_path = on_bikes_path && params[:search_impounded] == "only_impounded"
+        - on_impound_bikes_path = on_bikes_path && params[:search_impoundedness] == "only_impounded"
         %li
           = link_to "Bikes", organization_bikes_path(organization_id: current_organization.to_param), class: "menu-item #{(on_bikes_path && !on_impound_bikes_path) ? 'active' : ''}"
         - if current_organization.paid_for?("impound_bikes")
           %li
-            = link_to "Impounded Bikes", organization_bikes_path(organization_id: current_organization.to_param, impoundedness: "only_impounded"), class: "menu-item #{on_impound_bikes_path ? 'active' : ''}"
+            = link_to "Impounded Bikes", organization_bikes_path(organization_id: current_organization.to_param, search_impoundedness: "only_impounded"), class: "menu-item #{on_impound_bikes_path ? 'active' : ''}"
         %li
           = active_link "Add a bike", new_organization_bike_path(current_organization), class: "menu-item"
         %li
