--- a/app/views/organized/bikes/_search.html.haml
+++ b/app/views/organized/bikes/_search.html.haml
@@ -64,9 +64,11 @@
     "reg_phone_cell" => "Phone",
     "reg_address_cell" => "Address",
     "sticker_cell" => "Sticker",
+    "impounded_cell" => "Impounded",
   }
   optional_columns = current_organization.paid_for?("bike_codes") ? ["sticker_cell"] : []
   optional_columns += current_organization.additional_registration_fields.map { |f| "#{f}_cell" }
+  optional_columns += ["impounded_cell"] if @impoundedness == "only_impounded"
   default_columns = %w[created_at_cell
                        stolen_cell
                        manufacturer_cell
@@ -126,7 +128,10 @@
         - if current_organization.paid_for?("bike_codes")
           %th.hiddenColumn.hidden-xs-down{ class: "sticker_cell" }
             = t(".sticker")
-            - if params[:search_stickers].present?
+            - if @bike_code.present?
+              %th
+                = t(".link")
+            - elsif params[:search_stickers].present?
               %em.small
                 %a.less-strong{ href: "#organizedSearchSettings", "aria-controls" => "organizedSearchSettings", "data-toggle" => "collapse" }
                   - if @search_stickers == "with"
@@ -139,13 +144,8 @@
         / - if current_organization.paid_for?("avery_export")
         /   %th{ class: "avery_export_cell" }
         /     Export
-        - if @bike_code.present?
-          %th
-            = t(".link")
-            %br
-            = t(".sticker")
-        - if params[:search_impoundedness] == "only_impounded"
-          %th=(".impounded")
+        - if @impoundedness == "only_impounded"
+          %th.impounded_cell=t(".impounded")
     %tbody
       - @bikes.each do |bike|
         %tr
@@ -195,19 +195,22 @@
             /   %td.hiddenColumn{ class: "avery_export" }
             - if current_organization.paid_for?("bike_codes")
               %td.hidden-xs-down{ class: "sticker_cell" }
-                - bike.bike_codes.each_with_index do |bike_code, index|
-                  - if bike_code.organization.present?
-                    = link_to bike_code.code, edit_organization_sticker_path(id: bike_code.code, organization_id: bike_code.organization&.to_param), class: "small"
-                  - else
-                    %small
-                      = bike_code.code
-                  - if index > 0
-                    %br
-
-          - if @bike_code.present?
-            %td
-              %small
-                = link_to t(".link"), bike_code_path(id: @bike_code.code, organization_id: @bike_code.organization_id, bike_id: bike.id), method: "PUT"
+                - if @bike_code.present?
+                  %small
+                    = link_to t(".link"), bike_code_path(id: @bike_code.code, organization_id: @bike_code.organization_id, bike_id: bike.id), method: "PUT"
+                - else
+                  - bike.bike_codes.each_with_index do |bike_code, index|
+                    - if bike_code.organization.present?
+                      = link_to bike_code.code, edit_organization_sticker_path(id: bike_code.code, organization_id: bike_code.organization&.to_param), class: "small"
+                    - else
+                      %small
+                        = bike_code.code
+                    - if index > 0
+                      %br
+          - if @impoundedness == "only_impounded"
+            %td.impounded_cell
+              %small.convertTime
+                = l bike.current_impound_record.created_at, format: :convert_time
 
 .paginate-container.paginate-container-bottom
   = paginate @bikes
