add TODO re: translating header columns

--- a/app/views/organized/bikes/_search.html.haml
+++ b/app/views/organized/bikes/_search.html.haml
@@ -50,6 +50,7 @@
     = t(".settings")
 
 :ruby
+  # TODO: Now that we have translations, we need to localize this. I believe the easiest way to do so would be to pull the text from the header cell and use that.
   column_renames = {
     "created_at_cell" => "Registered",
     "updated_at_cell" => "Updated",
