--- a/app/views/admin/organizations/show.html.haml
+++ b/app/views/admin/organizations/show.html.haml
@@ -254,7 +254,7 @@
           %tr
             %td
               Features
-            %td
+            %td{ style: "font-size: 80%" }
               - @organization.paid_feature_slugs.each do |slug|
                 %code
                   = slug
