--- a/app/views/info/lightspeed.html.haml
+++ b/app/views/info/lightspeed.html.haml
@@ -52,13 +52,13 @@
   .blockquote-cite
     Seth Herr, Bike Index co-founder
 
-  .row{ style: "align-items: center;" }
+  .row.mt-4{ style: "align-items: center;" }
     .col-xs-6
       Learn more about
       %a{ href: "https://www.lightspeedhq.com/pos/retail/bike-shop/?utm_medium=partner&utm_source=Reseller&utm_campaign=001G00000118MwjIAE&ref=001G00000118MwjIAE", style: "display: inline-block;" }
         Lightspeed Retail
     .col-xs-6
-      %a{ href: "https://www.lightspeedhq.com/pos/retail/bike-shop/?utm_medium=partner&utm_source=Reseller&utm_campaign=001G00000118MwjIAE&ref=001G00000118MwjIAE", style: "display: inline-block;" }
+      %a{ href: "https://www.lightspeedhq.com/pos/retail/bike-shop/?utm_medium=partner&utm_source=Reseller&utm_campaign=001G00000118MwjIAE&ref=001G00000118MwjIAE", style: "display: block; margin: 0 auto; max-width: 200px;" }
         = image_tag "lightspeed_partner_logo.png"
 
 
