--- a/app/views/admin/stolen_bikes/edit.html.haml
+++ b/app/views/admin/stolen_bikes/edit.html.haml
@@ -1,10 +1,27 @@
 = render partial: "admin/bikes/bike", locals: { bike: @bike, target: "show", stolen_record: @stolen_record }
 
+%h3 Public Images
+
 .row.mt-2.mb-4
   - @bike.public_images.each_with_index do |img, index|
     - next if index == 1
     .col-3.mb-2.col-lg-2
       = image_tag img.image_url(:small), class: "ml-auto mr-auto", style: "display: block; max-width: 150px; height: auto;"
+
+%h3 Premium Alert Images
+
+= link_to "Regenerate",
+  regenerate_alert_image_admin_stolen_bike_path(@bike),
+  method: :patch,
+  data: { confirm: "Are you sure you want to regenerate premium alert images?" },
+  class: "btn btn-danger mb-4"
+
+.row.mt-2.mb-4
+  .col-3.mb-2.col-lg-2
+    = link_to @bike.alert_image_url, target: "_blank" do
+      = image_tag @bike.alert_image_url,
+        class: "ml-auto mr-auto",
+        style: "display: block; max-width: 150px; height: auto;"
 
 - if @stolen_record.blank?
   %h1.mt-4
