--- a/app/views/admin/stolen_bikes/edit.html.haml
+++ b/app/views/admin/stolen_bikes/edit.html.haml
@@ -17,11 +17,12 @@
   class: "btn btn-danger mb-4"
 
 .row.mt-2.mb-4
-  .col-3.mb-2.col-lg-2
-    = link_to @bike.alert_image_url(:square), target: "_blank" do
-      = image_tag @bike.alert_image_url(:square),
-        class: "ml-auto mr-auto",
-        style: "display: block; max-width: 150px; height: auto;"
+  - @bike&.current_stolen_record&.alert_image&.versions.keys.each do |version|
+    .col-3.mb-2.col-lg-2
+      = link_to @bike.alert_image_url(version), target: "_blank" do
+        = image_tag @bike.alert_image_url(version),
+          class: "ml-auto mr-auto",
+          style: "display: block; max-width: 150px; height: auto;"
 
 - if @stolen_record.blank?
   %h1.mt-4
