--- a/app/views/admin/stolen_bikes/edit.html.haml
+++ b/app/views/admin/stolen_bikes/edit.html.haml
@@ -8,7 +8,7 @@
     .col-3.mb-2.col-lg-2
       = image_tag img.image_url(:small), class: "ml-auto mr-auto", style: "display: block; max-width: 150px; height: auto;"
 
-%h3 Premium Alert Images
+%h3 Promoted Alert Images
 
 = link_to "Regenerate",
   regenerate_alert_image_admin_stolen_bike_path(@bike),
