--- a/app/views/admin/stolen_bikes/index.html.haml
+++ b/app/views/admin/stolen_bikes/index.html.haml
@@ -32,14 +32,14 @@
   %table.table.table-striped.table-bordered.table-sm
     %thead.thead-light
       %th
-        Stolen created&nbsp;<small class="convertTimezone"></small>
-      %th
-        Stolen
+        Stolen record created
+      %th.small
+        Stolen at
       %th
         Bike info
       %th
         Theft info
-      %th
+      %th.small
         Country
       %th
         City
