--- a/app/views/shared/_footer_revised.html.haml
+++ b/app/views/shared/_footer_revised.html.haml
@@ -64,7 +64,8 @@
                   class: "form-control-sm",
                   onchange: "this.form.submit()")
                 - if current_user.present? && current_user.preferred_language != I18n.locale
-                  = link_to t(".change_preferred_language"), my_account_path
+                  %em.below-input-help.text-right
+                    = link_to t(".change_preferred_language"), my_account_path
         .col-md-6.text-right
           %p
             = [link_to(t(".privacy_policy"), privacy_url),
