Revert "Merge branch 'master' into remove-code-for-old-views"
This reverts commit 155eda7232ddaaf831b487ab3688220cf5340d62, reversing
changes made to 271146a9c9f1d60d97d5b16bda53f54882a4516d.

--- a/app/views/admin/theft_alerts/_table.html.haml
+++ b/app/views/admin/theft_alerts/_table.html.haml
@@ -54,7 +54,7 @@
                 = number_to_currency(theft_alert_plan.amount_cents / 100.0, unit: "$")
           %td
             - if theft_alert.recovered?
-              = link_to "recovered!", admin_recovery_path(theft_alert.stolen_record), class: "text-success"
+              = link_to "recovered!", admin_recovery_path(theft_alert.bike), class: "text-success"
             - else
               - text_class = "text-info" if theft_alert.active?
               - text_class ||= "text-danger" if theft_alert.pending?
