--- a/app/assets/stylesheets/revised/pages/bikes/show.scss
+++ b/app/assets/stylesheets/revised/pages/bikes/show.scss
@@ -145,7 +145,8 @@
       }
     }
 
-    .organized-actions-wrap {
+    .geomessages-wrap {
+      text-align: right;
       padding: 8px 15px;
       background: #fdfdfd;
       border-top: 1px solid $gray-lightish;
