--- a/app/views/admin/bikes/_bike.html.haml
+++ b/app/views/admin/bikes/_bike.html.haml
@@ -244,7 +244,7 @@
         %table.table-list
           %tbody
             %tr
-              %td.text-left{ colspan: 2 }
+              %td{ colspan: 2 }
                 Description
             %tr
               %td.full-width-data{ colspan: 2 }
