--- a/app/views/admin/partial_bikes/index.html.haml
+++ b/app/views/admin/partial_bikes/index.html.haml
@@ -74,7 +74,10 @@
               = b_param.creation_organization.name
           %td{ style: "width: 30%;" }
             %div{ style: "overflow: scroll; white-space: nowrap;" }
-              = pretty_print_json(b_param.params)
+              %pre
+                %code
+                  = b_param.params.to_json.gsub('":{', "\":{\n ").gsub('":', '": ').gsub(",", ",\n ")
+
 
 
 
