--- a/app/views/admin/stolen_bikes/edit.html.haml
+++ b/app/views/admin/stolen_bikes/edit.html.haml
@@ -23,6 +23,7 @@
         = image_tag @bike.alert_image_url(version),
           class: "ml-auto mr-auto",
           style: "display: block; max-width: 150px; height: auto;"
+      .text-center= version
 
 - if @stolen_record.blank?
   %h1.mt-4
