--- a/app/views/admin/stolen_bikes/edit.html.haml
+++ b/app/views/admin/stolen_bikes/edit.html.haml
@@ -10,20 +10,20 @@
 
 %h3 Promoted Alert Images
 
-= link_to "Regenerate",
-  regenerate_alert_image_admin_stolen_bike_path(@bike),
-  method: :patch,
-  data: { confirm: "Are you sure you want to regenerate promoted alert images?" },
-  class: "btn btn-danger mb-4"
-
-.row.mt-2.mb-4
-  - @bike&.current_stolen_record&.alert_image&.versions.keys.each do |version|
-    .col-3.mb-2.col-lg-2
-      = link_to @bike.alert_image_url(version), target: "_blank" do
-        = image_tag @bike.alert_image_url(version),
-          class: "ml-auto mr-auto",
-          style: "display: block; max-width: 150px; height: auto;"
-      .text-center= version
+- if @alert_image_versions.blank?
+  None
+- else
+  = link_to "Regenerate",
+    regenerate_alert_image_admin_stolen_bike_path(@bike),
+    method: :patch,
+    data: { confirm: "Are you sure you want to regenerate promoted alert images?" },
+    class: "btn btn-danger mb-4"
+  .row.mt-2.mb-4
+    - @alert_image_versions.each do |name, image|
+      .col-3.mb-2.col-lg-2
+        = link_to image.url, target: "_blank" do
+          = image_tag image.url, class: "ml-auto mr-auto", style: "display: block; max-width: 150px; height: auto;"
+        .text-center= name
 
 - if @stolen_record.blank?
   %h1.mt-4
