--- a/app/views/admin/feedbacks/show.html.haml
+++ b/app/views/admin/feedbacks/show.html.haml
@@ -1,10 +1,10 @@
+- feedback_hash = @feedback.feedback_hash
 .admin-subnav
   .col
     %h1
       Messages
       %small
         = link_to "view all", admin_feedbacks_path
-
 .row
   .col-sm-6
     %table.table-list
@@ -36,20 +36,20 @@
                 user present
               - else
                 = link_to @feedback.email, admin_users_path(user_query: @feedback.email)
-        - if @feedback.feedback_hash.present?
+        - if feedback_hash.present?
           %tr
             %td
               data
             %td
               %pre
                 %code
-                  = @feedback.feedback_hash.to_yaml.gsub("---\n", "")
+                  = feedback_hash.to_yaml.gsub("---\n", "")
         - if @feedback.feedback_type == "bike_delete_request"
           %tr
             %td
               View Bike
             %td
-              = link_to "Deleted Bike", edit_admin_bike_path(id: @feedback.feedback_hash["bike_id"])
+              = link_to "Deleted Bike", edit_admin_bike_path(id: feedback_hash["bike_id"])
   .col-sm-6
     .card
       .card-body
